@@ -45,14 +45,14 @@ public class SCPick extends PlayerSubcommandData {
 
         Collection<Player> activePlayers = activeGame.getPlayers().values().stream()
                 .filter(Player::isRealPlayer)
-                .collect(Collectors.toList());
+                .toList();
         if (activePlayers.size() == 0) {
             sendMessage("No active players found");
             return;
         }
 
         int maxSCsPerPlayer = activeGame.getSCList().size() / activePlayers.size();
-        if (maxSCsPerPlayer <= 0) maxSCsPerPlayer = 1;
+        if (maxSCsPerPlayer == 0) maxSCsPerPlayer = 1;
 
         int playerSCCount = player.getSCs().size();
         if (playerSCCount >= maxSCsPerPlayer) {
@@ -96,7 +96,7 @@ public class SCPick extends PlayerSubcommandData {
     {
         Boolean privateGame = FoWHelper.isPrivateGame(activeGame, event);
         boolean isFowPrivateGame = (privateGame != null && privateGame);
-        String msg = "";
+        String msg;
         String msgExtra = "";
         boolean allPicked = true;
         Player privatePlayer = null;
@@ -111,9 +111,8 @@ public class SCPick extends PlayerSubcommandData {
             maxSCsPerPlayer = 1;
         }
 
-        StringBuilder sb = new StringBuilder();
-        sb.append(Helper.getPlayerRepresentation(player, activeGame, event.getGuild(), true));
-        sb.append(" Picked: ").append(Helper.getSCFrontRepresentation(activeGame, scPicked));
+        String sb = Helper.getPlayerRepresentation(player, activeGame, event.getGuild(), true) +
+            " Picked: " + Helper.getSCFrontRepresentation(activeGame, scPicked);
 
         boolean nextCorrectPing = false;
         Queue<Player> players = new ArrayDeque<>(activePlayers);
@@ -189,7 +188,7 @@ public class SCPick extends PlayerSubcommandData {
                 activeGame.setCurrentPhase("action");
             }
         }
-        msg = sb.toString();
+        msg = sb;
         MessageHelper.sendMessageToChannel(event.getMessageChannel(), msg);
 
         //SEND EXTRA MESSAGE
